--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,6 +205,17 @@ footer {
     padding: 20px;
 }
 
+/*------------------------------------------Three Reasons */
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
+}
+
 .inline-block {
     display: inline-block;
 }
