--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-/*------------------------------------------Colours */
+/*--------------------------------------------Colors*/
 
 .bg-color-name-title {
     background-color: #676767;
@@ -10,6 +10,9 @@
     background-color: #fff;
 }
 
+.bg-color-personal-info {
+    background-color: #f4f4f4;
+}
 
 .ui-menu-color-home {
     background-color: #e67e22;
@@ -27,9 +30,12 @@
     background-color: #525252;
 }
 
-/*------------------------------------------Special paddings/margins/text */
+/* ----------------------------------------Special paddings/margins/text */
 
-h1,h2,h3,h4 {
+h1,
+h2,
+h3,
+h4 {
     margin: 0;
 }
 
@@ -43,6 +49,10 @@ h1,h2,h3,h4 {
     color: #fafafa;
 }
 
+.inline-block {
+    display: inline-block;
+}
+
 .row-table {
     display: table;
 }
@@ -53,14 +63,14 @@ h1,h2,h3,h4 {
     float: none;
 }
 
-.secion-heading {
+.section-heading {
     font-family: "Exo", sans-serif;
     font-weight: 300;
     margin-top: 25px;
     margin-bottom: 40px;
 }
 
-/*------------------------------------------Heading */
+/*--------------------------------------------Heading*/
 
 header {
     margin: 0;
@@ -106,13 +116,13 @@ header {
     font-size: 0;
 }
 
-#nav {
-    margin: 0;
-}
-
 #nav li {
     font-size: 14px;
     padding: 0;
+}
+
+#nav {
+    margin: 0;
 }
 
 .menuitem {
@@ -124,7 +134,7 @@ header {
 .menuitem a {
     width: 100%;
     text-decoration: none;
-    color: white;
+    color: #fff;
     height: 120px;
 }
 
@@ -146,14 +156,14 @@ header {
     letter-spacing: 2px;
 }
 
-/*------------------------------------------Hover.css */
+/*--------------------------------------------Hover.css*/
 
-.hvr-sweep-to-bottom::before {
-    background: rgba(0,0,0,0.2);
+.hvr-sweep-to-bottom:before {
+    background: rgba(0, 0, 0, 0.2);
     height: 120px;
 }
 
-/*------------------------------------------Footer */
+/* ----------------------------------------Footer */
 
 footer {
     background-color: #525252;
@@ -205,7 +215,7 @@ footer {
     padding: 20px;
 }
 
-/*------------------------------------------Three Reasons */
+/* ----------------------------------------Three Reasons */
 
 .three-reasons-icon {
     font-size: 26px;
@@ -216,6 +226,57 @@ footer {
     margin-bottom: 15px;
 }
 
-.inline-block {
+/* ----------------------------------------Personal Info */
+
+.personal-info-item {
+    margin-bottom: 20px;
+    display: block;
+    clear: both;
+}
+
+.personal-info-item .key,
+.personal-info-item .value {
+    padding-right: 8px;
     display: inline-block;
+}
+
+.personal-info-item .key p,
+.personal-info-item .value p {
+    margin: 0;
+}
+
+.personal-info-item .key {
+    width: 30%;
+    margin-right: 21px;
+    padding-top: 2px;
+    vertical-align: top;
+}
+
+.personal-info-item .key p {
+    font-weight: 700;
+}
+
+.personal-info-item .value {
+    position: relative;
+    width: 60%;
+}
+
+/* ----------------------------------------Skills */
+.progress {
+    position: relative;
+    height: 25px;
+    margin-bottom: 4px;
+}
+
+.progress-type {
+    position: absolute;
+    left: 0px;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25,25,25, 0.2);
+}
+
+.progress-section {
+    margin: 40px 20px;
 }
