Style work history background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,10 @@
     background-color: #525252;
 }
 
+.bg-color-work-history {
+    background-color: #9b59b6;
+}
+
 /* ----------------------------------------Special paddings/margins/text */
 
 h1,
@@ -63,6 +67,7 @@ h4 {
     float: none;
 }
 
+.history-heading,
 .section-heading {
     font-family: "Exo", sans-serif;
     font-weight: 300;
@@ -279,4 +284,11 @@ footer {
 
 .progress-section {
     margin: 40px 20px;
+}
+
+/* ----------------------------------------Work History */
+
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
 }
